2015-02-07  Richard Braun  <rbraun@sceen.net>

	* hurd/hurd/signal.h (_hurd_critical_section_lock): Don't unlock
	sigstate.

2015-02-07  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/pthread/aio_misc.c [!AIO_PRIO_DELTA_MAX]: Do not check
	priority against unexistent AIO_PRIO_DELTA_MAX.
	* misc/chflags.c (chflags): Set flags parameter type to unsigned long
	instead of int.
	* misc/fchflags.c (fchflags): Likewise.
	* sysdeps/mach/hurd/chflags.c (chflags): Likewise.
	* sysdeps/mach/hurd/fchflags.c (fchflags): Likewise.
	* sysdeps/mach/hurd/bits/stat.h [__USE_MISC] (UF_SETTABLE, UF_NODUMP,
	UF_IMMUTABLE, UF_APPEND, UF_OPAQUE, UF_NOUNLINK, SF_SETTABLE,
	SF_ARCHIVED, SF_IMMUTABLE, SF_APPEND, SF_NOUNLINK, SF_SNAPSHOT):
	Declare macros.
	[__USE_MISC] (chflags, fchflags): Declare functions.
	* hurd/hurdselect.c (_hurd_select): In the poll case, do not return
	EINVAL when nfds is greater than FD_SETSIZE.
	* hurd/hurd/resource.h (MACH_PRIORITY_TO_NICE,
	NICE_TO_MACH_PRIORITY): Align nice levels on Mach priorities from 5 to
	45.
	* hurd/hurdselect.c (_hurd_select): Pass MACH_RCV_INTERRUPT to
	__mach_msg.  If that returns MACH_RCV_INTERRUPTED, set ERR to EINTR.
	* hurd/hurdselect.c (_hurd_select): Remove unreachable check for
	MACH_RCV_TIMED_OUT.

2015-02-06  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/arm/sysdep.h [!PROF] [ARCH_HAS_T2 && !PIC] (LDR_GLOBAL):
	Use sfi_breg on ldr.
	[!PROF] [ARCH_HAS_T2 && PIC && ARM_PCREL_MOVW_OK] (LDR_GLOBAL):
	Likewise.

	* nptl/tst-cancel25.c (tf2): Test for SIGCANCEL being blocked only if
	it's defined.
	* nptl/tst-signal7.c (do_test): Test SIGCANCEL only if it's defined.
	Test SIGSETXID only if it's defined.

	* nptl/tst-locale1.c (useless): Use SIGRTMIN only if it's defined.

	* rt/tst-timer2.c (do_test): Don't initialize SIGEV.sigev_signo, which
	will not be used.  Use NULL rather than 0 for .sigev_notify_attributes.

	* nptl/tst-align2.c: Moved ...
	* sysdeps/unix/sysv/linux/tst-align-clone.c: ... here.